5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4370/executions/1734_2498.log
== SUBMITION (2019-05-09 19:11:16) 
-- CODE:
A = int(input("digite o numero de habitantes: "))
B = int(input("digite o numero de habitantes: "))
p_A = float(input("digite o percentual: "))
p_B = float(input("digite o percentual: "))
t = 0
while(A < B):
	A = A + (A * P_A/100)
	A = B + (B * P_B/100)
	t = t+1
print(t)
	
	
	
-- EXECUTION TIME:
0.222868
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1734/2498/main.py", line 7, in <module>
    A = A + (A * P_A/100)
NameError: name 'P_A' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:11:32) 
-- CODE:
A = int(input("digite o numero de habitantes: "))
B = int(input("digite o numero de habitantes: "))
p_A = float(input("digite o percentual: "))
p_B = float(input("digite o percentual: "))
t = 0
while(A < B):
	A = A + (A * p_A/100)
	A = B + (B * p_B/100)
	t = t+1
print(t)
	
	
	
-- EXECUTION TIME:
0.185399
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
1
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
1
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:11:35) 
-- CODE:
A = int(input("digite o numero de habitantes: "))
B = int(input("digite o numero de habitantes: "))
p_A = float(input("digite o percentual: "))
p_B = float(input("digite o percentual: "))
t = 0
while(A < B):
	A = A + (A * p_A/100)
	A = B + (B * p_B/100)
	t = t+1
print(t)
	
	
	
-- EXECUTION TIME:
0.126345
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
1
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
1
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:11:47) 
-- CODE:
A = int(input("digite o numero de habitantes: "))
B = int(input("digite o numero de habitantes: "))
p_A = float(input("digite o percentual: "))
p_B = float(input("digite o percentual: "))
t = 0
while(A < B):
	A = A + (A * p_A/100)
	B = B + (B * p_B/100)
	t = t+1
print(t)
	
	
	
-- EXECUTION TIME:
0.151218
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
